--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-bootstrap": "^2.0.0-beta.4",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.1.2",
     "web-vitals": "^1.1.2"
   },
