--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "font-awesome": "^4.7.0",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.20",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
