--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "chart.js": "^3.5.1",
     "font-awesome": "^4.7.0",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.20",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
-    "react-chartjs-2": "^3.0.4",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router": "^5.2.0",
+    "react-screen-capture": "^1.0.1",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.5",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.1.2",
     "web-vitals": "^1.1.2"
